image shown time fix in record metafile

--- a/imageTest.html
+++ b/imageTest.html
@@ -222,7 +222,7 @@
                     imagesShownTimeInfo = imagesShownTimeInfo.split('\\').join('');
                     console.log("After Replace :\n" + imagesShownTimeInfo);
                     
-                    var parsableList = '{"times": [' + imagesShownTimeInfo + '] }';
+                    var parsableList = '{"times": ' + imagesShownTimeInfo + ' }';
                     console.log(parsableList);
                     imagesShownTimeList = JSON.parse(parsableList);
                     console.log(imagesShownTimeList);
