Noise interval is set to once per 3 pictures shown.

--- a/imageTest.html
+++ b/imageTest.html
@@ -122,7 +122,7 @@
           warning.play();
 
           imageTimer = setInterval(imageChanger, interval);
-
+          noiseInterval = interval * 3;
           noiseTimer = setInterval(makeNoise, noiseInterval);
 
           imageChanger();
