--- a/countdownTest.html
+++ b/countdownTest.html
@@ -88,7 +88,7 @@
       var adjustTimeModeOn = false;
       var categoryShift = 0;
 
-      var video = document.getElementById("video");
+      var video = document.getElementById("videoElement");
 
       var image = document.getElementById("testImage");
 
