--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
   </head>
   <body>
     <div align="center">
+      <div style="background-image: url('resources/images/flag_tr.png'); width: 32px; height: 32px; background-size: cover; display:inline-block;" onclick="setLang('tr')"></div>
+      <div style="background-image: url('resources/images/flag_uk.png'); width: 32px; height: 32px; background-size: cover; display:inline-block;" onclick="setLang('en')"></div>
       <table>
     	<tr>
-    		<td>
-    			Yaş: 
+    		<td id="age">
+    			Yaş
     		</td>
     		<td>
     			<input type="number" name="age" id="userAge" min="1" max="100" value="25"/>
     		</td>
     	</tr>
     	<tr>
-       		<td>
-    			Cinsiyet: 
+       		<td id="sex">
+    			Cinsiyet
     		</td>
     		<td>
-				<input type="radio" name="gender" id="genderMale" value="male" checked> Male<br>
+				<input type="radio" name="gender" id="genderMale" value="male" checked/> <span id="male"> Erkek</span> <br>
     		</td>
     		<td>
-				<input type="radio" name="gender" value="female"> Female<br>
+				<input type="radio" name="gender" value="female"/> <span id="female"> Kadın</span> <br>
     		</td>
     	</tr>
     	<tr/>
@@ -55,13 +57,13 @@
         </td>
 	    </tr>
 	    <tr>
-	    	<td>
+	    	<td id="image_test">
 	    		Resim Testi
 	    	</td>
-	    	<td>
+	    	<td id="stroop_test">
 	    		Stroop Testi
 	    	</td>
-        <td>
+        <td id="countdown_test">
           Geri Sayım Testi
         </td>
 	    </tr>
@@ -69,12 +71,36 @@
     </div>
 
     <script type="text/javascript">
-    	function setUserInfo(){
-			var age = document.getElementById("userAge").value;
-    		localStorage.setItem("userAge", age);
+      var dictionary = {
+        age: { tr: "Yaş", en: "Age"},
+        sex: { tr: "Cinsiyet", en: "Sex"},
+        male: { tr: "Erkek", en: "Male"},
+        female: { tr: "Kadın", en: "Female"},
+        image_test: { tr: "Resim Testi", en: "Image Test"},
+        stroop_test: { tr: "Stroop Testi", en: "Stroop Test"},
+        countdown_test: { tr: "Geri Sayım Testi", en: "Countdown Test"}
+      };
 
-			var gender = (document.getElementById("genderMale").checked) ? "M" : "F";
-    		localStorage.setItem("userGender", gender);
+      function setTextForLang(lang) {
+        Object.keys(dictionary).forEach(key => document.getElementById(key).innerText = dictionary[key][lang]);
+      }
+
+      function setLang(lang) {
+        var url = new URL(location.href);
+        url.searchParams.set('lang', lang);
+        location.href = url.href;
+      }
+
+      var langParam = new URL(location.href).searchParams.get('lang');
+
+      langParam && (langParam == 'tr' || langParam == 'en') && setTextForLang(langParam);
+
+    	function setUserInfo() {
+  			var age = document.getElementById("userAge").value;
+      		localStorage.setItem("userAge", age);
+
+  			var gender = (document.getElementById("genderMale").checked) ? "M" : "F";
+      		localStorage.setItem("userGender", gender);
     	}
     </script>
   </body>
