Fix on/off translation

--- a/countdownTest.html
+++ b/countdownTest.html
@@ -117,8 +117,8 @@
 
     <!-- Time Adjustment -->
     <div id="adjustTimeMode" style="display: none">
-      <span id="adjust_Time_Mode">Zaman Ayarlama Modu :</span><input id="adjustTimeModeOn" type="radio" name="adjustTimeMode"/>Açık
-      <input id="adjustTimeModeOff" type="radio" name="adjustTimeMode" checked/>Kapalı
+      <span id="adjust_Time_Mode">Zaman Ayarlama Modu :</span><input id="adjustTimeModeOn" type="radio" name="adjustTimeMode"/><span id="adjust_Time_Mode_On">Açık</span>
+      <input id="adjustTimeModeOff" type="radio" name="adjustTimeMode" checked/><span id="adjust_Time_Mode_Off">Kapalı</span>
     </div>
 
     <!--Perform translation -->
