--- a/stroopTest.html
+++ b/stroopTest.html
@@ -46,7 +46,7 @@
       </table>
     </div>
     <div>
-      <a id="downloadlink" style="display: none">İndir</a>
+      <a id="downloadlink" style="display: none"><span id="download">İndir</span></a>
     </div>
 
     <div>
@@ -59,8 +59,8 @@
     <div id="edaChartContainer" style="height: 300px; width: 100%;"></div>
     <div id="accChartContainer" style="height: 300px; width: 100%;"></div>
     <div id="adjustTimeMode" style="display: none">
-      <span id="adjust_Time_Mode">Zaman Ayarlama Modu :</span><input id="adjustTimeModeOn" type="radio" name="adjustTimeMode"/>Açık
-      <input id="adjustTimeModeOff" type="radio" name="adjustTimeMode" checked/>Kapalı
+      <span id="adjust_Time_Mode">Zaman Ayarlama Modu :</span><input id="adjustTimeModeOn" type="radio" name="adjustTimeMode"/><span id="adjust_Time_Mode_On">Açık</span>
+      <input id="adjustTimeModeOff" type="radio" name="adjustTimeMode" checked/><span id="adjust_Time_Mode_Off">Kapalı</span>
     </div>
     
     <!--Perform translation -->
