--- a/imageTest.html
+++ b/imageTest.html
@@ -30,7 +30,7 @@
       <img id="testImage" src="resources/images/ResimTesti.png" style="width:800px;height:600px"/>
     </div>
     <div>
-      <a download="imageShownTime.txt" id="downloadlink" style="display: none">İndir</a>
+      <a download="imageShownTime.txt" id="downloadlink" style="display: none"><span id="download">İndir</span></a>
     </div>
 
     <div>
@@ -43,8 +43,8 @@
     <div id="edaChartContainer" style="height: 300px; width: 100%;"></div>
     <div id="accChartContainer" style="height: 300px; width: 100%;"></div>
     <div id="adjustTimeMode" style="display: none">
-      <span id="adjust_Time_Mode">Zaman Ayarlama Modu :</span><input id="adjustTimeModeOn" type="radio" name="adjustTimeMode"/>Açık
-      <input id="adjustTimeModeOff" type="radio" name="adjustTimeMode" checked/>Kapalı
+      <span id="adjust_Time_Mode">Zaman Ayarlama Modu :</span><input id="adjustTimeModeOn" type="radio" name="adjustTimeMode"/><span id="adjust_Time_Mode_On">Açık</span>
+      <input id="adjustTimeModeOff" type="radio" name="adjustTimeMode" checked/><span id="adjust_Time_Mode_Off">Kapalı</span>
     </div>
 
     <!--Perform translation -->
