Add minor translation

--- a/countdownTest.html
+++ b/countdownTest.html
@@ -98,8 +98,8 @@
 
     <!-- Download Links-->
     <div>
-      <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" style="display: none">İndir (Video)</a>
-      <a download="metaData.txt" id="metaDataLink" style="display: none">İndir (MetaData)</a>
+      <a id="downloadLink" download="mediarecorder.webm" name="mediarecorder.webm" style="display: none"><span id="download">İndir</span> (Video)</a>
+      <a download="metaData.txt" id="metaDataLink" style="display: none"><span id="download">İndir</span> (MetaData)</a>
     </div>
 
     </div>
